[package]
name = "trading-oms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage
dashmap = "6.1"
rocksdb = { version = "0.22", features = ["lz4", "zstd"] }
lru = "0.12"
parking_lot = "0.12"

# Time/UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
config = "0.14"
toml = "0.8"

# Performance
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.16"

# Async traits
async-trait = "0.1"

# Testing
color-eyre = "0.6"

[dev-dependencies]
tempfile = "3.10"
