[package]
name = "trading-oms-client"
version = "0.1.0"
edition = "2021"
authors = ["Trading Systems Team"]
description = "Test client for Trading OMS"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random data generation for testing
rand = "0.8"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }

# Command line interface
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
config = "0.14"
toml = "0.8"

# Pretty printing
tabled = "0.16"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
